syntax = "proto3";
option java_multiple_files = false;
option java_package = "io.grpc.examples";
option java_outer_classname = "SearchProto";
option objc_class_prefix = "HLW";


message SearchRequest{
    string query = 1;
    int32 page_number = 2;
    int32 result_per_page =3;
}

message SearchReply{
    string message = 1;
    int32 page_number = 2;
    int32 result_per_page =3;
    string total_page = 4;

}

service Search {
    rpc SayHello ( SearchRequest) returns (  SearchReply) {}
}